# ehandler

./: .gitignore  CMakeLists.txt  README.md
examples/: 1-ehandler.c  2-goto.c  3-opemsg.c  a
include/: ehandler.h
src/: ehandler.c
